Fixed WS-56 Safari and Chrome product name overlaps cart when selecting products that contain large size/color names

--- a/templates/brooklyn/css/webstore-dark.css
+++ b/templates/brooklyn/css/webstore-dark.css
@@ -185,7 +185,7 @@ p.products_slider { font-size: 14px; font-weight: bold; margin: 8px 0 0 5px; col
 #product_details .price { font-size: 1.8em; margin-top: 20px; }
 #product_details .price_reg { font-size: 0.8em; color: #555555;}
 #product_details .price_slash { text-decoration: line-through; }
-
+#product_details #lblTitle { word-wrap: break-word; }
 #product_details .addcart { width: 192px; background-color: #848478; color: white; height: 24px; padding-top: 12px; padding-bottom: 10px; margin-right: 10px; text-align: center;margin-bottom: 10px; cursor: pointer; float: left;}
 #product_details .addcart a { margin-top: 20px; color: white; text-transform: uppercase; font-size: 1.1em;}
 
